; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/common/extr_vulkan_common.c_vulkan_buffer_chain_step.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/common/extr_vulkan_common.c_vulkan_buffer_chain_step.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vk_buffer_chain = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.TYPE_2__* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vk_buffer_chain*)* @vulkan_buffer_chain_step to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vulkan_buffer_chain_step(%struct.vk_buffer_chain* %0) #0 {
  %2 = alloca %struct.vk_buffer_chain*, align 8
  store %struct.vk_buffer_chain* %0, %struct.vk_buffer_chain** %2, align 8
  %3 = load %struct.vk_buffer_chain*, %struct.vk_buffer_chain** %2, align 8
  %4 = getelementptr inbounds %struct.vk_buffer_chain, %struct.vk_buffer_chain* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = load %struct.vk_buffer_chain*, %struct.vk_buffer_chain** %2, align 8
  %9 = getelementptr inbounds %struct.vk_buffer_chain, %struct.vk_buffer_chain* %8, i32 0, i32 1
  store %struct.TYPE_2__* %7, %struct.TYPE_2__** %9, align 8
  %10 = load %struct.vk_buffer_chain*, %struct.vk_buffer_chain** %2, align 8
  %11 = getelementptr inbounds %struct.vk_buffer_chain, %struct.vk_buffer_chain* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
